Fixed layout issues

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -1,5 +1,6 @@
 div.Left{
   margin-top: 20px;
+  width: 70%;
 }
 
 div.bottom {
