--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,6 +1,8 @@
 .sponsor {
     position: relative;
-    left: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
     top: 20px;
     opacity: 0.7;
 }
@@ -29,7 +31,7 @@
 }
 
 #members {
-    width: 600px;
+    width: 100%;
     position: relative;
     top: -100px;
 }
@@ -540,6 +542,7 @@ FOR PROPORTIONAL WIDTH
 .col {
 	padding: 0 20px;
 	text-align: left;
+    width: 100%;
 }
 
 .Left .col,
